--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Document sans nom</title>
 </head>
 <body style="background: #fc0;">
-	<h1 style="padding: 20% 0; text-align: center;">Location de voitures anciennes</h1>
+	<h1 style="padding: 20% 0; text-align: center; color:white;">Location de voitures anciennes</h1>
 </body>
 </html>
