--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Document sans nom</title>
 </head>
-<body style="background: #fc0;">
+<body style="background: #bdc3c7;">
 	<h1 style="padding: 20% 0; text-align: center; color:white;">Location de voitures anciennes</h1>
 </body>
 </html>
